[package]
name = "github_backup"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "github_backup"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.52", features = ["fs", "process", "macros", "rt-multi-thread"] }
tokio-util = {version="0.7", features=["compat"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "http2", "charset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.21"
opendal ={ version="0.55", features=["services-s3"] }
futures-util = { version = "0.3", features = ["io"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = "z"      # or "s" (often a bit faster; slightly larger)
lto = "fat"          # or true (thin LTO). fat usually smallest, slower build
codegen-units = 1    # helps LTO + smaller binaries
panic = "abort"      # removes unwinding machinery (big win), if acceptable
strip = "symbols"    # stable on recent Rust; otherwise use `strip` tool
debug = 0
